<resources>
    <string name="app_name">Calculator</string>
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_point">.</string>
    <string name="button_add">+</string>
    <string name="button_subtract">-</string>
    <string name="button_multiply">×</string>
    <string name="button_divide">÷</string>
    <string name="button_percent">%</string>
    <string name="button_equal">=</string>
    <string name="button_delete">delete</string>
    <string name="button_clear">C</string>
    <string name="button_toggle_advanced_calculator">toggle</string>
</resources>
